--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.8"
 colorama = "^0.4.4"
 pyfiglet = "^0.8.post1"
 termcolor = "^1.1.0"
+dpkt = "^1.9.6"
+pyshark = "^0.4.3"
 
 [tool.poetry.dev-dependencies]
 
