--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pyfiglet = "^0.8.post1"
 termcolor = "^1.1.0"
 dpkt = "^1.9.6"
 pyshark = "^0.4.3"
+scapy = "^2.4.5"
 
 [tool.poetry.dev-dependencies]
 
